fix responsive table add style -> overflow-x: scroll;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,7 @@ white-space: nowrap;
 }
 .outer{
   width: 100%;
+  overflow-x: scroll;
 }
 @media screen and (max-width:1024px) {  
     img {
